Bug 422172 - New Users kcm: modified account's name is not immediately updated in the users list
Summary: New Users kcm: modified account's name is not immediately updated in the user...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_users (other bugs)
Version First Reported In: 5.18.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Janet Blackquill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-28 12:13 UTC by Patrick Silva
Modified: 2020-08-05 21:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments
screen recording (3.21 MB, video/webm)
2020-05-28 12:13 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-05-28 12:13:12 UTC
Created attachment 128855 [details]
screen recording

SUMMARY
Modified account's name is only updated after we reopen Users kcm.
Watch the attached screen recording please.

EXPECTED RESULT
modified account's name should be immediately updated in the users list

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.71.0
Qt Version: 5.14.2
Comment 1 Nate Graham 2020-06-10 22:04:31 UTC
Can confirm.
Comment 2 Bug Janitor Service 2020-07-29 22:28:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/87
Comment 3 Janet Blackquill 2020-08-05 21:02:44 UTC
Git commit 790f1991171d4568396c13878ba13c1f9eaa0dbc by Carson Black.
Committed on 05/08/2020 at 21:02.
Pushed by cblack into branch 'master'.

[kcms/users]: Properly handle data changing in the model

Instead of resetting the model every time data changes, a more specific dataChanged signal is emitted.

M  +14   -14   kcms/users/src/user.cpp
M  +7    -7    kcms/users/src/user.h
M  +17   -4    kcms/users/src/usermodel.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/790f1991171d4568396c13878ba13c1f9eaa0dbc