[kcms/users]: Properly handle data changing in the model

Instead of resetting the model every time data changes, a more specific dataChanged signal is emitted.

BUG: 422172